--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,7 @@
         </div>
         <canvas id="gameCanvas" width="800" height="600" style="display: none;"></canvas>
         <div id="score">Score: 0 - 0</div>
+        <button id="startButton" style="margin-top: 10px;">Start Game</button>
     </div>
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
     <script src="./src/main.js"></script>
